syntax = "proto3";
import "google/protobuf/any.proto";
package Dozer;
service FilmsService {
  rpc films(GetFilmsRequest) returns (GetFilmsResponse);
  rpc by_id(GetFilmsByIdRequest) returns (GetFilmsByIdResponse);
  rpc query(QueryFilmsRequest) returns (QueryFilmsResponse);   
}


message Film {
 optional int32 film_id = 1; 
 optional string description = 2; 
 optional string rental_rate = 3; 
 optional int32 release_year = 4; 
}

message SortOptions {
 enum SortDirection { 
   asc = 0; 
   desc = 1; 
 } 
 string field_name = 1; 
 SortDirection direction = 3; 
}

message GetFilmsRequest {
}

message GetFilmsResponse {
 repeated Film film = 1;
}

message GetFilmsByIdRequest {
 int32 film_id = 1;
}

message GetFilmsByIdResponse {
 optional Film film = 1;
}

message QueryFilmsRequest {
 optional FilterExpression filter = 1; 
 repeated SortOptions order_by = 2; 
 optional uint32 limit = 3; 
 optional uint32 skip = 4; 
}

message QueryFilmsResponse {
 repeated Film film = 1;
}

message FilterExpression {
  oneof expression {
    SimpleExpression simple = 1;
    AndExpression and = 2;
  }
}

message SimpleExpression {
  enum Operator { 
    LT = 0; 
    LTE = 1; 
    EQ = 2;
    GT = 3;
    GTE = 4;
    Contains = 5;
    MatchesAny = 6;
    MatchesAll = 7;
  } 
  string field = 1;
  Operator operator = 2;
  google.protobuf.Any value = 3;
}

message AndExpression {
  repeated FilterExpression and_expression = 1;
}